--- a/LivingWater/LivingWater.csproj
+++ b/LivingWater/LivingWater.csproj
@@ -141,6 +141,7 @@
     <Content Include="Assets\js\directives\services\Globalization.js" />
     <Content Include="Assets\js\directives\services\processChecker.js" />
     <Content Include="Assets\js\directives\services\properties\inboxProperties.js" />
+    <Content Include="Assets\js\directives\services\properties\newsProperties.js" />
     <Content Include="Assets\js\directives\services\properties\productsService.js" />
     <Content Include="Assets\js\directives\services\properties\registrationProperties.js" />
     <Content Include="Assets\js\directives\services\registrationService.js" />
