--- a/LivingWater/LivingWater.csproj
+++ b/LivingWater/LivingWater.csproj
@@ -197,6 +197,7 @@
     <Content Include="Assets\js\directives\template1\ui\carouselImage\carouselImage.html" />
     <Content Include="Assets\js\directives\template1\ui\carouselImage\carouselImage.js" />
     <Content Include="Assets\js\directives\template1\ui\carouselImage\css\carousel.css" />
+    <Content Include="Assets\js\directives\template1\ui\concernComponent\concernComponent.css" />
     <Content Include="Assets\js\directives\template1\ui\concernComponent\concernComponent.html" />
     <Content Include="Assets\js\directives\template1\ui\concernComponent\concernComponent.js" />
     <Content Include="Assets\js\directives\template1\ui\contactComponents\contactUsBody\contactUs.css" />
