--- a/LivingWater/LivingWater.csproj
+++ b/LivingWater/LivingWater.csproj
@@ -243,6 +243,8 @@
     <Content Include="Assets\js\directives\template1\ui\verificationCode\verificationCode.js" />
     <Content Include="Assets\js\directives\template2\ui\newsComponents\newsBody\newsBody.html" />
     <Content Include="Assets\js\directives\template2\ui\newsComponents\newsBody\newsBody.js" />
+    <Content Include="Assets\js\directives\template2\ui\newsComponents\newsPreview\newsPreview.html" />
+    <Content Include="Assets\js\directives\template2\ui\newsComponents\newsPreview\newsPreview.js" />
     <Content Include="Assets\js\directives\template2\ui\products\productBody\productBody.html" />
     <Content Include="Assets\js\directives\template2\ui\products\productBody\productBody.js" />
     <Content Include="index.aspx" />
