--- a/LivingWater/LivingWater.csproj
+++ b/LivingWater/LivingWater.csproj
@@ -197,6 +197,9 @@
     <Content Include="Assets\js\directives\template1\house\viewNews\module.js" />
     <Content Include="Assets\js\directives\template1\house\viewNews\viewNews.html" />
     <Content Include="Assets\js\directives\template1\house\viewNews\viewNewsCtrl.js" />
+    <Content Include="Assets\js\directives\template1\house\viewProducts\module.js" />
+    <Content Include="Assets\js\directives\template1\house\viewProducts\viewProducts.html" />
+    <Content Include="Assets\js\directives\template1\house\viewProducts\viewProductsCtrl.js" />
     <Content Include="Assets\js\directives\template1\mainController\App.js" />
     <Content Include="Assets\js\directives\template1\mainController\AppCtrl.js" />
     <Content Include="Assets\js\directives\template1\ui\aboutUs\aboutUs.html" />
@@ -259,10 +262,14 @@
     <Content Include="Assets\js\directives\template1\ui\verificationCode\css\verificationCode.css" />
     <Content Include="Assets\js\directives\template1\ui\verificationCode\verificationCode.html" />
     <Content Include="Assets\js\directives\template1\ui\verificationCode\verificationCode.js" />
+    <Content Include="Assets\js\directives\template2\ui\displayVideo\displayVideo.html" />
+    <Content Include="Assets\js\directives\template2\ui\displayVideo\displayVideo.js" />
     <Content Include="Assets\js\directives\template2\ui\navigationBar\navigationBar.html" />
     <Content Include="Assets\js\directives\template2\ui\navigationBar\navigationBar.js" />
     <Content Include="Assets\js\directives\template2\ui\newsComponents\newsBody\newsBody.html" />
     <Content Include="Assets\js\directives\template2\ui\newsComponents\newsBody\newsBody.js" />
+    <Content Include="Assets\js\directives\template2\ui\newsComponents\newsModify\newsModify.html" />
+    <Content Include="Assets\js\directives\template2\ui\newsComponents\newsModify\newsModify.js" />
     <Content Include="Assets\js\directives\template2\ui\newsComponents\newsPreview\newsPreview.html" />
     <Content Include="Assets\js\directives\template2\ui\newsComponents\newsPreview\newsPreview.js" />
     <Content Include="Assets\js\directives\template2\ui\products\productBody\productBody.html" />
