--- a/LivingWater/LivingWater.csproj
+++ b/LivingWater/LivingWater.csproj
@@ -140,11 +140,13 @@
     <Content Include="Assets\js\directives\services\dbpost\dbAddInboxContent.js" />
     <Content Include="Assets\js\directives\services\dbpost\dbAddProduct.js" />
     <Content Include="Assets\js\directives\services\dbpost\dbDeleteInboxSelected.js" />
+    <Content Include="Assets\js\directives\services\dbpost\dbDeleteProductItems.js" />
     <Content Include="Assets\js\directives\services\dbpost\dbGlobByLanguage.js" />
     <Content Include="Assets\js\directives\services\dbpost\dbSubmitConcern.js" />
     <Content Include="Assets\js\directives\services\dbpost\dbSubmitLogin.js" />
     <Content Include="Assets\js\directives\services\dbpost\dbSubmitOrder.js" />
     <Content Include="Assets\js\directives\services\dbpost\dbSubmitRegistration.js" />
+    <Content Include="Assets\js\directives\services\dbpost\dbUpdateProduct.js" />
     <Content Include="Assets\js\directives\services\errorProtocols.js" />
     <Content Include="Assets\js\directives\services\filters\allProduct.js" />
     <Content Include="Assets\js\directives\services\filters\byGenre.js" />
